--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
 </head>
 
 <body>
-
+    <container class="container">
+        <header>
+            <h1>Lista zadań</h1>
+        </header>
+        <section class="section">
+            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <div class="section__body">
+                <form class="form js-form">
+                    <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
+                    <button class="form__button">Dodaj zadanie</button>
+                </form>
+            </div>
+        </section>
+        <section class="section">
+            <h2 class="section__header">Lista zadań</h2>
+            <div class="section__body">
+                <ul class="tasks js-tasks"></ul>
+            </div>
+        </section>
+    </container>
 </body>
 
 </html>
