--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <h1>Lista zadań</h1>
         </header>
         <section class="section">
-            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <header class="section__header">
+                <h2 class="section__title">Dodaj nowe zadanie</h2>
+            </header>
             <div class="section__body">
                 <form class="form js-form">
                     <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
@@ -36,7 +38,10 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
+            <header class="section__header">
+                <h2 class="section__title">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
+            </header>
             <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
             </div>
