added tasks.css to html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/form.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
     <link href="css/buttons.css" rel="stylesheet">
+    <link href="css/tasks.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
